--- a/Tools/Simiki_GithubPages.html
+++ b/Tools/Simiki_GithubPages.html
@@ -60,6 +60,7 @@
 <li><a href="#gitment">Gitment 评论模块</a></li>
 <li><a href="#_5">补充：</a></li>
 <li><a href="#_6">后续</a></li>
+<li><a href="#20180814">2018/08/14更新</a></li>
 </ul>
 </div>
 <h2 id="simiki">Simiki介绍</h2>
@@ -236,6 +237,7 @@ Aborting.
 <li>由于直接编译生成的html公式显示有问题，因此用Typora直接导出新编写的md文件为html文件，合并入之前的备份下的含有html的对应文件夹中，然后替换掉<code>output</code>下的对应文件夹</li>
 <li>执行<code>fab deploy</code>提交<code>output</code>文件夹到远程<code>wiki</code>仓库<code>gh-pages</code>分支</li>
 </ol>
+<h2 id="20180814">2018/08/14更新</h2>
 </div>
 <div id="content-footer">created in <span class="create-date date"> 2018-06-27 00:00 </span></div>
 <div id="comments"></div>
