--- a/Tools/Simiki_GithubPages.html
+++ b/Tools/Simiki_GithubPages.html
@@ -60,7 +60,18 @@
 <li><a href="#gitment">Gitment 评论模块</a></li>
 <li><a href="#_5">补充：</a></li>
 <li><a href="#_6">后续</a></li>
-<li><a href="#20180814">2018/08/14更新</a></li>
+<li><a href="#20180814">2018/08/14更新</a><ul>
+<li><a href="#win10simiki-github-pageswiki">win10下simiki+ github pages搭建部署个人wiki</a><ul>
+<li><a href="#1-simiki">1 安装simiki</a></li>
+<li><a href="#2-github-pages">2 部署到github pages</a><ul>
+<li><a href="#21-ssh">2.1 配置ssh</a></li>
+<li><a href="#22-github">2.2 部署到github</a></li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+</li>
 </ul>
 </div>
 <h2 id="simiki">Simiki介绍</h2>
@@ -238,6 +249,36 @@ Aborting.
 <li>执行<code>fab deploy</code>提交<code>output</code>文件夹到远程<code>wiki</code>仓库<code>gh-pages</code>分支</li>
 </ol>
 <h2 id="20180814">2018/08/14更新</h2>
+<p>费了半天劲才找出<code>simiki g</code>生成的页面公式显示不正确的原因，原来是公式渲染用到的是mathjax，而mathjax与markdwon解析器存在语法冲突：mathjax认为下划线_表示下标，而markdown解析器认为下划线_表示斜体，因此就出现了公式中本来是下标的部分变成了斜体。<br />
+解决方法是修改markdown解析语法或者修改解析顺序，但操作难度太大，能力有限啊。。。还有一种办法就是在下划线等冲突符号前加一个转义字符\进行转义，用这种方法的话，如果 想要实时预览，就要找到能同时支持markdown和mathjax的博客平台，真的是太难找了，不过还好我没放弃，终于邂逅了FarBox，完美支持markdown和mathjax，跟<code>simiki g</code>生成的网页一毛一样。但是问题又来了，Farbox的linux版本官方很早就不再维护了，最新的版本在ubuntu16.04中无法运行，因此只能转向windwos系统。<br />
+最终解决方案：win10+simiki+FarBox</p>
+<h3 id="win10simiki-github-pageswiki">win10下simiki+ github pages搭建部署个人wiki</h3>
+<h4 id="1-simiki">1 安装simiki</h4>
+<p>首先装好python和pip，然后用命令<code>pip install simiki</code>即可安装simiki。注意：如果是用anaconda安装的python，会出现pyyaml包无法卸载的问题，需要用<code>conda uninstall pyyaml</code>先将conda管理的yaml包卸载，然后再<code>pip install simiki</code>，就可以解决包冲突问题了。最后再<code>conda install anaconda-navigator</code>将刚才卸载pyyaml时附加卸载的navigator装上就可以了。 <br />
+windows安装git：https://msysgit.github.com/</p>
+<h4 id="2-github-pages">2 部署到github pages</h4>
+<h5 id="21-ssh">2.1 配置ssh</h5>
+<p>检查本机是否有ssh key设置<code>cd ~/.ssh</code>，如果没有则提示： No such file or director。如果有则进入~/.ssh路径下（ls查看当前路径文件，rm * 删除所有文件）<br />
+<code>cd ~</code><br />
+<code>·ssh-keygen -t rsa -C "你登录github的邮箱"</code><br />
+登录github，点击头像进入设置，进入<code>SSH and GPG keys</code>，点击<code>New SSH key</code>，复制id_rsa.pub的公钥内容到key输入框中，title输入框随便输入，最后点击<code>Add Key</code><br />
+测试是否链接成功，<code>ssh -T -v git@github.com</code><br />
+设置帐户：</p>
+<div class="hlcode"><pre><span class="n">git</span> <span class="n">config</span> <span class="o">--</span><span class="n">global</span> <span class="n">user</span><span class="p">.</span><span class="n">name</span> <span class="s">&quot;2kkkkk&quot;</span> 
+<span class="n">git</span> <span class="n">config</span> <span class="o">--</span><span class="n">global</span> <span class="n">user</span><span class="p">.</span><span class="n">email</span> <span class="s">&quot;568581045@qq.com&quot;</span>
+</pre></div>
+
+
+<h5 id="22-github">2.2 部署到github</h5>
+<p>如果不是第一次部署，可以直接跳到第3步<br />
+1.先将<code>master</code>分支克隆到本地：<code>git clone git@github.com:2kkkkk/wiki.git</code><br />
+2.为确保用ssh而不是http连接，可以更新下origin：</p>
+<div class="hlcode"><pre><span class="n">git</span> <span class="n">remote</span> <span class="n">remove</span> <span class="n">origin</span>
+<span class="n">git</span> <span class="n">remote</span> <span class="n">add</span> <span class="n">origin</span> <span class="n">git</span><span class="err">@</span><span class="n">github</span><span class="p">.</span><span class="n">com</span><span class="o">:</span><span class="mi">2</span><span class="n">kkkkk</span><span class="o">/</span><span class="n">wiki</span><span class="p">.</span><span class="n">git</span>
+</pre></div>
+
+
+<p>3.将写好的md文件放进<code>content</code>文件夹下，然后命令行进入到<code>wiki</code>文件夹：<code>cd wiki</code>，执行脚本：<code>deploy heiheihei</code>（如果是第一次部署的话，需要先执行<code>deploy -i</code>,再执行<code>deploy heiheihei</code> ）</p>
 </div>
 <div id="content-footer">created in <span class="create-date date"> 2018-06-27 00:00 </span></div>
 <div id="comments"></div>
