--- a/Math/central.html
+++ b/Math/central.html
@@ -42,6 +42,8 @@
 <div id="content">
   <div class="toc"><span class="toctitle">Table of Contents</span><ul>
 <li><a href="#_1">大数定理</a></li>
+<li><a href="#_2">中心极限定理</a></li>
+<li><a href="#_3">参考</a></li>
 </ul>
 </div>
 <h2 id="_1">大数定理</h2>
@@ -57,7 +59,7 @@ $$<br />
     第三次摇，数出有70个硬币正面朝上，$\bar X=(55+65+70)/3$<br />
     …………<br />
     当你摇的次数足够多（无数次）时，最终这个平均值$\bar X=50$</p>
-<p>## 中心极限定理</p>
+<h2 id="_2">中心极限定理</h2>
 <p>大量相互独立的随机变量，其均值（或者和）的分布以正态分布为极限（意思就是<strong>当Sample Size比较大，采样次数越接近无穷大的时候，就越接近正态分布</strong>）。而这个定理amazing的地方在于，无论是什么分布的随机变量，都满足这个定理。</p>
 <p>举个例子。</p>
 <p>现在有一个<strong>奇形怪状</strong>的六面骰子，并且六面上的点数分别为1,1,2,3,3,5。 我们现在开始掷这个骰子（可视为一个随机过程），然后记录下每次朝上的点数（每次扔骰子可视为一个随机变量），先扔6次好了。</p>
@@ -67,7 +69,7 @@ $$<br />
 <p>然后你再掷9次，分别求得每次结果的均值，于是你得到了 </p>
 <p>$\bar S_1,\bar S_2,\bar S_3,\bar S_4,\bar S_5,\bar S_6,\bar S_7,\bar S_8,\bar S_9,\bar S_{10}$ </p>
 <p>现在神奇的地方是，这10个值的分布，有点像是正态分布。而当n趋向正无穷时，这无穷个均值的分布就是正态分布了。并且这个正态分布的均值$\mu$和<strong>投掷奇形怪状骰子并记录朝上的点数</strong>这个随机过程的均值是一样的。</p>
-<p>## 参考</p>
+<h2 id="_3">参考</h2>
 <p>https://www.zhihu.com/question/22913867 XXCC的回答</p>
 </div>
 <div id="content-footer">created in <span class="create-date date"> 2018-07-11 00:00 </span></div>
